--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
 
 <h1>About me</h1>
 <p>Not much to say, just a geezer making a blog</p>
-<%= link_to "Home", root_path %>
+<%= link_to "Home", root_path, class:"btn btn-primary"  %>
