--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,5 +2,5 @@
 <h1>Rob's Blog</h1>
 <p>A basic blog for basic bobs</p>
 
-<%= link_to "About", about_path %>
+<%= link_to "About", about_path, class:"btn btn-primary"  %>
 </div>
